<?xml version="1.0" encoding="utf-8"?>
<android.support.wearable.view.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView app:layout_box="all"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/js_test_description"
                android:layout_margin="@dimen/js_padding"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/js_padding"
                android:text="@string/js_charging_description_1"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/js_charging_start_test_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/js_start_test_text"
                android:onClick="startTest"
                android:enabled="false"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/js_padding"
                android:layout_marginBottom="@dimen/js_padding">
                <ImageView
                    android:id="@+id/charging_off_test_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/fs_indeterminate"
                    android:layout_marginRight="@dimen/js_padding"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/js_charging_off_test"
                    android:textSize="16dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/js_padding"
                android:text="@string/js_charging_description_2"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/js_padding"
                android:layout_marginBottom="@dimen/js_padding">
                <ImageView
                    android:id="@+id/charging_on_test_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/fs_indeterminate"
                    android:layout_marginRight="@dimen/js_padding"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/js_charging_on_test"
                    android:textSize="16dp"/>
            </LinearLayout>
            <include layout="@layout/pass_fail_buttons" />
        </LinearLayout>
    </ScrollView>
</android.support.wearable.view.BoxInsetLayout>
